* add telepathy-accounts-signon to riscv64

--- a/kde/telepathy-accounts-signon/PKGBUILD
+++ b/kde/telepathy-accounts-signon/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=telepathy-accounts-signon
 pkgver=2.1
 pkgrel=4
 pkgdesc="A mission control plugin for Telepathy, integrating with libaccounts and libsignon to provide IM accounts and authentication"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://gitlab.com/accounts-sso/telepathy-accounts-signon'
 license=(LGPL)
 depends=(telepathy-mission-control libaccounts-glib libsignon-glib)
