--- a/kde/telepathy-logger-qt/PKGBUILD
+++ b/kde/telepathy-logger-qt/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=telepathy-logger-qt
 pkgver=17.09.0
 pkgrel=3
 pkgdesc="Qt bindings for telepathy logger"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.kde.org/'
 license=(GPL)
 depends=(telepathy-qt telepathy-logger)
