--- a/kde/telepathy-kde-common-internals/PKGBUILD
+++ b/kde/telepathy-kde-common-internals/PKGBUILD
@@ -5,21 +5,22 @@
 
 pkgname=telepathy-kde-common-internals
 _pkgname=ktp-common-internals
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Common components for KDE-Telepathy'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/KTp'
 license=(GPL)
 groups=(kde-applications kde-network telepathy-kde)
 depends=(knotifyconfig ktexteditor kpeople telepathy-logger-qt kaccounts-integration libotr telepathy-accounts-signon)
 makedepends=(extra-cmake-modules kdoctools doxygen)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$_pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('0b1150218eca694d7a9d5f74e79c3a987f9d6428a9c8483b09f812d4b4134a53'
+sha256sums=('064bfca2c97888cd32828d6b73f787547e313be337ce1bf753c19456f413f96a'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $_pkgname-$pkgver \
