--- a/kde/telepathy-kde-auth-handler/PKGBUILD
+++ b/kde/telepathy-kde-auth-handler/PKGBUILD
@@ -5,21 +5,22 @@
 
 pkgname=telepathy-kde-auth-handler
 _pkgname=ktp-auth-handler
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Provide UI/KWallet Integration For Passwords and SSL Errors on Account Connect'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/KTp'
 license=(GPL)
 groups=(kde-applications kde-network telepathy-kde)
 depends=(qca-qt5 telepathy-kde-common-internals)
 makedepends=(extra-cmake-modules)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$_pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('20ba303586164deccce797977b913ad86f0b8d7d0e63b588a7011577f6cf03c5'
+sha256sums=('2c09a203e30c24d7852e08bbfd520ee9813af07c3622ad206a7ad5e45d04ef51'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $_pkgname-$pkgver \
