--- a/kde/telepathy-kde-desktop-applets/PKGBUILD
+++ b/kde/telepathy-kde-desktop-applets/PKGBUILD
@@ -5,21 +5,22 @@
 
 pkgname=telepathy-kde-desktop-applets
 _pkgname=ktp-desktop-applets
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='The KDE-Telepathy Plasma desktop applets'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/KTp'
 license=(GPL)
 groups=(kde-applications kde-network telepathy-kde)
 depends=(telepathy-kde-common-internals telepathy-kde-accounts-kcm plasma-workspace)
 makedepends=(extra-cmake-modules)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$_pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('6a853bd9db077a115cb23d1a8ee55c213907d3c4a2c99a454f3f53b3392a2faa'
+sha256sums=('d1ba42af431ab2ddcfb41742dc13103804dbaed3c4dfae23e2b39ed5b4340206'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $_pkgname-$pkgver \
