--- a/kde/telepathy-kde-filetransfer-handler/PKGBUILD
+++ b/kde/telepathy-kde-filetransfer-handler/PKGBUILD
@@ -5,21 +5,22 @@
 
 pkgname=telepathy-kde-filetransfer-handler
 _pkgname=ktp-filetransfer-handler
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='KDE Telepathy file transfer handler'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/KTp'
 license=(GPL)
 groups=(kde-applications kde-network telepathy-kde)
 depends=(telepathy-kde-common-internals)
 makedepends=(extra-cmake-modules kdoctools)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$_pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('2cc1f4cbc98cb361f1ad3f36f9d61263e997206c65140b5eeb3a1c7f9ef6009a'
+sha256sums=('931a5f249cfbfcfe9e9d6dfd2f2a7e3aa07b157d095e4cacc2604eb14e8c052b'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $_pkgname-$pkgver \
