--- a/kde/kpeoplevcard/PKGBUILD
+++ b/kde/kpeoplevcard/PKGBUILD
@@ -8,6 +8,7 @@ pkgdesc='Makes it possible to expose vcards to KPeople'
 url='https://kde.org/'
 license=(GPL)
 arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 depends=(kpeople kcontacts)
 makedepends=(extra-cmake-modules)
 source=("https://download.kde.org/stable/$pkgname/$pkgver/$pkgname-$pkgver.tar.xz"{,.sig})
