--- a/kde/pulseaudio-qt/PKGBUILD
+++ b/kde/pulseaudio-qt/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=pulseaudio-qt
 pkgver=1.3
 pkgrel=1
 pkgdesc='Qt bindings for libpulse'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://community.kde.org/Frameworks'
 license=(LGPL)
 depends=(qt5-base libpulse)
