--- a/kde/kdesdk-thumbnailers/PKGBUILD
+++ b/kde/kdesdk-thumbnailers/PKGBUILD
@@ -4,21 +4,22 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kdesdk-thumbnailers
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Plugins for the thumbnailing system'
 url='https://www.kde.org/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 groups=(kde-applications kdesdk)
 depends=(kio gettext)
 makedepends=(extra-cmake-modules)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('8583f2568d8819104db8e4f63d442080e4e0742152a9d98c0fbfc0e70067d66a'
+sha256sums=('be4d77a893995d553528eb1155375b15e11ecc16d8aa1221f35c101a1fcc670c'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
