--- a/kde/akonadiconsole/PKGBUILD
+++ b/kde/akonadiconsole/PKGBUILD
@@ -3,7 +3,7 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=akonadiconsole
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Akonadi management and debugging console'
 arch=(x86_64 powerpc64le)
@@ -13,11 +13,12 @@ depends=(calendarsupport messagelib)
 makedepends=(extra-cmake-modules kdoctools boost)
 groups=(kde-applications kde-pim)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('3f5169cb2d572d9e6f8b6bd9bbf6302769da39a9e0db934596a0af2b17655cb4'
+sha256sums=('21479f3d9d0d7a8d3e890157f1f8aff73015a4c3880a190dbe05f0a4b3020bb2'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
