* update libkvkontakte to 5.0.0-3

--- a/kde/libkvkontakte/PKGBUILD
+++ b/kde/libkvkontakte/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=libkvkontakte
 pkgver=5.0.0
 pkgrel=3
 pkgdesc="C++ library for asynchronous interaction with VK social network via its web API"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.digikam.org'
 license=(GPL)
 depends=(kdewebkit)
