--- a/kde/khealthcertificate/PKGBUILD
+++ b/kde/khealthcertificate/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=khealthcertificate
 pkgver=21.12
 pkgrel=1
 pkgdesc='Handling of digital vaccination, test and recovery certificates'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.kde.org'
 license=(LGPL)
 depends=(karchive kcodecs)
