--- a/kde/ktorrent/PKGBUILD
+++ b/kde/ktorrent/PKGBUILD
@@ -4,23 +4,26 @@
 # Contributor: Georg Grabler <ggrabler@gmail.com>
 
 pkgname=ktorrent
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='A powerful BitTorrent client for KDE'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://apps.kde.org/ktorrent/'
 license=(GPL2)
-depends=(libktorrent kcmutils knotifyconfig phonon-qt5 qt5-webengine)
+depends=(libktorrent kcmutils knotifyconfig kparts phonon-qt5)
+depemds_powerpc64le=(qt5-webengine)
+depends_x86_64=(qt5-webengine)
 makedepends=(extra-cmake-modules kdoctools boost plasma-workspace kdnssd taglib syndication kplotting geoip)
 optdepends=('plasma-workspace: shutdown plugin' 'kdnssd: zeroconf plugin' 'taglib: mediaplayer plugin' 'geoip: info widget plugin'
             'syndication: syndication plugin' 'kplotting: statistics plugin')
 groups=(kde-applications kde-network)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('47766be51dd67f3acd19786e7224d630f9abcf08f37fb9858ed7b71907d58d2e'
+sha256sums=('ed97d2d4b58c8305cac04067988514442711447215d7e255816d92b918363d08'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver
