--- a/kde/kpmcore/PKGBUILD
+++ b/kde/kpmcore/PKGBUILD
@@ -2,10 +2,10 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kpmcore
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='Library for managing partitions'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://apps.kde.org/partitionmanager/'
 license=(GPL2)
 depends=(smartmontools kcoreaddons kwidgetsaddons ki18n polkit-qt5 qca-qt5)
@@ -23,11 +23,12 @@ optdepends=('e2fsprogs: ext2/3/4 support'
             'nilfs-utils: nilfs support'
             'udftools: UDF support')
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('777e8c584933218b928c8c0a00f49d31f5b9719557174f4f4271d1b6ca08739a'
+sha256sums=('6ad7a6d04a1c28bca9e934a3d7664fcb91069f841a8292208764ff4eca5300a6'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
