--- a/kde/klines/PKGBUILD
+++ b/kde/klines/PKGBUILD
@@ -4,21 +4,22 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=klines
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='A simple but highly addictive one player game'
 url='https://apps.kde.org/klines/'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL)
 groups=(kde-applications kde-games)
 depends=(libkdegames hicolor-icon-theme)
 makedepends=(extra-cmake-modules kdoctools)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('e8a7a8ea6326b05b94f6cb4c3b5b9ef9a7c966890dc7c4e5af7617d0b5b38ba2'
+sha256sums=('0edf55dd0599a7e91bd22aa13d42f02bf823b600b2333e80d43f70dd3831f1fa'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
