* add astyle for riscv64

--- a/astyle/PKGBUILD
+++ b/astyle/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=3.1
 _pkgver=3.1.0
 pkgrel=4
 pkgdesc='A free, fast and small automatic formatter for C, C++, C#, and Java source code.'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='http://astyle.sourceforge.net/'
 license=('LGPL')
 depends=('gcc-libs')
