--- a/kde/kdevelop-pg-qt/PKGBUILD
+++ b/kde/kdevelop-pg-qt/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=kdevelop-pg-qt
 pkgver=2.2.1
 pkgrel=3
 pkgdesc="KDevelop Parser Generator, a LL(1) parser generator used by KDevelop language plugins"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.kdevelop.org/"
 license=(GPL)
 depends=(qt5-base)
