--- a/kde/kdevelop/PKGBUILD
+++ b/kde/kdevelop/PKGBUILD
@@ -4,11 +4,11 @@
 # Contributor: Giovanni Scafora <giovanni@archlinux.org>
 
 pkgname=kdevelop
-pkgver=21.12.1
-_clangver=13.0.0
+pkgver=21.12.3
+_clangver=13.0.1
 pkgrel=1
 pkgdesc='C++ IDE using KDE technologies'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='http://www.kdevelop.org/'
 license=(GPL)
 depends=(clang=$_clangver libksysguard kitemmodels knotifyconfig ktexteditor grantlee libkomparediff2 kcmutils threadweaver)
@@ -25,16 +25,18 @@ optdepends=('konsole: embedded terminal'
             'purpose: patch review plugin'
             'astyle: astyle plugin'
             'cppcheck: code analyzer' 'heaptrack: memory profiler'
-            'clazy: clazy analyzer plugin')
+            'clazy: clazy analyzer plugin'
+            'kio-extras: man pages plugin')
 conflicts=(kdevelop-qmljs kdevplatform)
 replaces=(kdevelop-qmljs kdevplatform kdevelop-clang-tidy)
 groups=(kde-applications kdevelop)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('87f7edabea172c69fb7bfaf9272109fdce2f4f1b423fa38d0c2a9ac0613a52a8'
+sha256sums=('86f36502559675aaae2afc8f2d649ee29997cd75a32116acf63e9edce94717ea'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
