--- a/kde/kdevelop-php/PKGBUILD
+++ b/kde/kdevelop-php/PKGBUILD
@@ -3,22 +3,23 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kdevelop-php
-pkgver=5.6.2
+pkgver=21.12.3
 pkgrel=1
-pkgdesc="PHP language and documentation plugin for KDevelop"
-arch=(x86_64 powerpc64le powerpc)
-url="http://www.kdevelop.org/"
+pkgdesc='PHP language and documentation plugin for KDevelop'
+arch=(x86_64 powerpc64le powerpc riscv64)
+url='http://www.kdevelop.org/'
 license=(GPL)
 depends=(kdevelop)
 makedepends=(extra-cmake-modules kdoctools kdevelop-pg-qt)
-source=("https://download.kde.org/stable/kdevelop/$pkgver/src/kdev-php-$pkgver.tar.xz"{,.sig})
-sha256sums=('f1083daec2b8c752de1a0441d0f9f72274b1e2d29c723005ed78dcf8ba717e0c'
+groups=(kde-applications kdevelop)
+source=(https://download.kde.org/stable/release-service/$pkgver/src/kdev-php-$pkgver.tar.xz{,.sig})
+sha256sums=('4a85438a51bf6e3faedca3f64c2ffd08355d20fd4214c12fe010f003f5c3b17c'
             'SKIP')
-validpgpkeys=('329FD02C5AA48FCC77A4BBF0AC44AC6DB29779E6'  # Sven Brauch <mail@svenbrauch.de>
-              '364EFA5F639572907D392999C64CF56B13CACE5D'  # Kevin Funk <kfunk@kde.org>
-              'E191FD5BE6F46870F09E82B2024E7FB43D015474'  # Friedrich W. H. Kossebau <kossebau@kde.org>
-              '0A48BC961075B4BA8523E3790A345FB086E797D9'  # https://share.kde.org/s/8dKaJTw8pR8iiwJ
-              'C51B45A532F17FA401D099A0A0C6B72C4F1C5E7C') # Milian Wolff <mail@milianw.de>
+validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
+              F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
+              D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
+
 
 build() {
   cmake -B build -S kdev-php-$pkgver \
