--- a/kde/kdenlive/PKGBUILD
+++ b/kde/kdenlive/PKGBUILD
@@ -6,7 +6,7 @@
 # Contributor: Gustavo Alvarez <sl1pkn07@gmail.com>
 
 pkgname=kdenlive
-pkgver=21.12.1
+pkgver=21.12.3
 pkgrel=1
 pkgdesc='A non-linear video editor for Linux using the MLT video framework'
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -22,11 +22,12 @@ optdepends=('ffmpeg: for FFmpeg plugin'
             'plasma-desktop: theme configuration'
             'opentimelineio: timeline export/import')
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('dcd56718b2db687f9d4c63974a648c2b6641173d011362d2d9619442baef6fe4'
+sha256sums=('7aa3fee6f2938664f2e35dae97a67ebfdedb6aec2bf4bbabfca5e7b1456c55c1'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
               D81C0CB38EB725EF6691C385BB463350D6EF31EF) # Heiko Becker <heiko.becker@kde.org>
+options=(debug)
 
 build() {
   cmake -B build -S $pkgname-$pkgver \
