--- a/elixir/PKGBUILD
+++ b/elixir/PKGBUILD
@@ -4,20 +4,20 @@
 # Contributor: Gilbert Kennen <gilbert firewatcher org>
 
 pkgname=elixir
-pkgver=1.12.3
+pkgver=1.13.2
 pkgrel=1
 
 pkgdesc="a functional meta-programming aware language built on top of the Erlang VM"
 url="https://elixir-lang.org"
 license=('Apache' 'custom:EPL')
 
-arch=('any')
+arch=(any)
 
 depends=('erlang-nox')
 checkdepends=('git')
 
 source=("$pkgname-$pkgver.tar.gz::https://github.com/elixir-lang/elixir/archive/v$pkgver.tar.gz")
-sha256sums=('c5affa97defafa1fd89c81656464d61da8f76ccfec2ea80c8a528decd5cb04ad')
+sha256sums=('03afed42dccf4347c4d3ae2b905134093a3ba2245d0d3098d75009a1d659ed1a')
 
 build() {
   cd elixir-"$pkgver"
