--- a/cargo-c/PKGBUILD
+++ b/cargo-c/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Daniel Bermond <dbermond@archlinux.org>
 
 pkgname=cargo-c
-pkgver=0.9.6
+pkgver=0.9.8
 pkgrel=1
 pkgdesc='A cargo subcommand to build and install C-ABI compatibile dynamic and static libraries'
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -10,10 +10,11 @@ url='https://github.com/lu-zero/cargo-c/'
 license=('MIT')
 depends=('curl' 'openssl' 'zlib')
 makedepends=('rust')
+options=('!lto')
 source=("https://github.com/lu-zero/cargo-c/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz"
         "${pkgname}-${pkgver}.Cargo.lock"::"https://github.com/lu-zero/cargo-c/releases/download/v${pkgver}/Cargo.lock")
-sha256sums=('c121bc2069373c25a89dcf9c357aa1e91d9eb4eb46a87db4d9931114070317c5'
-            'd89b9b02ae95d1993b12ef1a764157b5a42bc70d39e91eb5844320dc809a0e08')
+sha256sums=('7c649061826e0ad3c2c8735718f4a0c4afd12eed9b9fdc5fe59e34582902e1c5'
+            '11f23a09ef06ca2125027e24574124a99089863fb4226570b6adbe317848b670')
 
 prepare() {
     ln -sf "../${pkgname}-${pkgver}.Cargo.lock" "${pkgname}-${pkgver}/Cargo.lock"
