* update firefox to 99.0.1-1

--- a/firefox/PKGBUILD
+++ b/firefox/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Jakub Schmidtke <sjakub@gmail.com>
 
 pkgname=firefox
-pkgver=98.0.2
+pkgver=99.0.1
 pkgrel=1
 pkgdesc="Standalone web browser from mozilla.org"
 arch=(x86_64 powerpc64le riscv64)
@@ -34,8 +34,9 @@ source=(https://archive.mozilla.org/pub/firefox/releases/$pkgver/source/firefox-
         ppc.patch
         Skia-table-titles-fading.patch
         Skia-menu-fonts.patch
-        Skia-ConvolutionFilter.patch)
-sha256sums=('c144b6016aaa8ceab8154b9f0b2bbeee6cbc22ab7f811fcece28d36e49565890'
+        Skia-ConvolutionFilter.patch
+        1758610.diff)
+sha256sums=('76d22279ce99588a728bb2d034064be0d5918b5900631f2148d4565b8a72e00b'
             'SKIP'
             'a9e5264257041c0b968425b5c97436ba48e8d294e1a0f02c59c35461ea245c33'
             'a9b8b4a0a1f4a7b4af77d5fc70c2686d624038909263c795ecc81e0aec7711e9'
@@ -44,12 +45,13 @@ sha256sums=('c144b6016aaa8ceab8154b9f0b2bbeee6cbc22ab7f811fcece28d36e49565890'
             '958cf5016e9845b6ee6e2ed05ad96cc2fc6f74bebbb338a7b7ce29bffd2be716'
             '944fc690a0b344ea56ff2b0880ba492ba80338a68f31d0fb205b891a5de42cee'
             '3ebba6c6c59dbf754b522d2535c27eae3e724aab575b8e7be9658e0d33183bcf'
-            '58f09287af2dd1dc2907a0dde68cc04d39f1eab448094322c3ffef6ba7878009'
-            'SKIP'
+            'bb1e775512137859ee0dd6eaebd4580257f793196fb074c660247d3935ca9148'
+            'e03d3f9fc62c4de4226dba4c42239a328b5061dca869296d222bacd3fc961872'
             'cea57582d6cd7c34e99226bccafc87dbf7368186a5d76eb0836d4ddbce3bc81f'
             '895129290e71efa359f547552f99259e7e1c3b042c47397e90407942c2f59f24'
             'd2e5974942f161eb43b158968ad8ea3184a9c0527169d0af7ef5e9ac126be0f7'
-            'ad3799ee347923572aee6ca2934779b26a88cfc0db444208f4b8015b976b203c')
+            'ad3799ee347923572aee6ca2934779b26a88cfc0db444208f4b8015b976b203c'
+            '04e9ccc75abe70c4fa45af183e3e422615e821c857dfd59002ee9187680e05f6')
 validpgpkeys=('14F26682D0916CDD81E37B6D61B7B526D98F0353') # Mozilla Software Releases <release@mozilla.com>
 
 # Google API keys (see http://www.chromium.org/developers/how-tos/api-keys)
@@ -79,9 +81,10 @@ prepare() {
 
   # Talospace goodness
   patch -Np1 -i ${srcdir}/firefox-pgo.diff
+  patch -Np1 -i ${srcdir}/1758610.diff
 
   # sourced from T2 SDE, thanks!
-  patch -Np1 -i ${srcdir}/riscv.patch
+  #patch -Np1 -i ${srcdir}/riscv.patch
   patch -Np1 -i ${srcdir}/ppc.patch
   patch -Np1 -i ${srcdir}/Skia-table-titles-fading.patch
   patch -Np1 -i ${srcdir}/Skia-menu-fonts.patch
