--- a/netpbm/PKGBUILD
+++ b/netpbm/PKGBUILD
@@ -2,21 +2,21 @@
 # Maintainer: 
 
 pkgname=netpbm
-pkgver=10.73.36
+pkgver=10.73.37
 pkgrel=1
 pkgdesc="A toolkit for manipulation of graphic images"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('custom' 'BSD' 'GPL' 'LGPL')
 url="http://netpbm.sourceforge.net/"
-depends=('perl' 'libpng' 'libxml2')
-makedepends=('python2' 'jbigkit') # 'subversion')
+depends=('perl' 'libpng' 'libtiff' 'libxml2')
+makedepends=('python2' 'jbigkit' 'subversion')
 options=('!makeflags')
 # Get docs with: wget --recursive --relative -nH http://netpbm.sourceforge.net/doc/
 source=(https://downloads.sourceforge.net/project/netpbm/super_stable/$pkgver/netpbm-$pkgver.tgz
         https://sources.archlinux.org/other/packages/netpbm/netpbm-doc-31Jan2014.tar.xz{,.sig}
         netpbm-CAN-2005-2471.patch netpbm-security-code.patch netpbm-security-scripts.patch
         reproducible-man-gzip.patch use-source-date-epoch.patch)
-sha256sums=('93b31b11b003082d5fd4037ae5c768b91ea7330b10247a25086c10b5dd71e445'
+sha256sums=('e8826b5bc9a283220a60e8a24c6f5a854f5825c15e4f5171e77b6884f191fafd'
             '74bcf840ee643c6917330c382484010cb99c004a3fcf05391bebcac63815acb3'
             'SKIP'
             '991aba7897e0710687369b4e2edfba1397ecd77d62578eac496afbc47b5ca970'
@@ -40,7 +40,7 @@ prepare() {
   cp config.mk.in  config.mk
   [ "${CARCH}" = 'x86_64' ] && echo 'CFLAGS_SHLIB = -fPIC' >> config.mk
   echo "NETPBM_DOCURL = file://${srcdir}/doc" >> config.mk
-  #echo 'TIFFLIB = libtiff.so' >> config.mk
+  echo 'TIFFLIB = libtiff.so' >> config.mk
   echo 'JPEGLIB = libjpeg.so' >> config.mk
   echo 'PNGLIB = libpng.so' >> config.mk
   echo 'ZLIB = libz.so' >> config.mk
@@ -55,8 +55,8 @@ build() {
   cd $pkgname-$pkgver
   make
   # Generating useful man pages with html doc
-  #make MAKEMAN="${srcdir}/$pkgname-$pkgver/buildtools/makeman" USERGUIDE=. \
-  #  -C ../doc -f "${srcdir}/$pkgname-$pkgver/buildtools/manpage.mk" manpages
+  make MAKEMAN="${srcdir}/$pkgname-$pkgver/buildtools/makeman" USERGUIDE=. \
+    -C ../doc -f "${srcdir}/$pkgname-$pkgver/buildtools/manpage.mk" manpages
 }
 
 package() {
@@ -66,8 +66,8 @@ package() {
 # Removing dummy man pages
   rm "${pkgdir}"/usr/share/man/man{1,3,5}/*
 
-  #make MAKEMAN="${srcdir}/$pkgname-$pkgver/buildtools/makeman" MANDIR="${pkgdir}/usr/share/man" \
-  #  -C ../doc -f "${srcdir}/$pkgname-$pkgver/buildtools/manpage.mk" installman
+  make MAKEMAN="${srcdir}/$pkgname-$pkgver/buildtools/makeman" MANDIR="${pkgdir}/usr/share/man" \
+    -C ../doc -f "${srcdir}/$pkgname-$pkgver/buildtools/manpage.mk" installman
 
 # Replace obsolete utility
   echo -e '#!/bin/sh\npamditherbw $@ | pamtopnm\n' > "${pkgdir}/usr/bin/pgmtopbm"
