* update netctl to 1.28-1

--- a/netctl/PKGBUILD
+++ b/netctl/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jouke Witteveen <j.witteveen@gmail.com>
 
 pkgname=netctl
-pkgver=1.26
+pkgver=1.28
 pkgrel=1
 pkgdesc='Profile based systemd network management'
 url='https://gitlab.archlinux.org/archlinux/netctl'
@@ -21,9 +21,9 @@ optdepends=('dialog: for the menu based wifi assistant'
            )
 install=netctl.install
 source=(https://sources.archlinux.org/other/packages/netctl/netctl-${pkgver}.tar.xz{,.sig})
-arch=('any')
-md5sums=('16a586ae8f175fd7879b3be940f12161'
-         'dac86ccc823ed89bef97da92867bc5a0')
+arch=(any)
+md5sums=('ef8f6cb6b2e4e905f2f4ebae828c7d81'
+         'fb9e2a0b7df54a2576fe70d08f22f98d')
 validpgpkeys=('CFA6AF15E5C74149FC1D8C086D1655C14CE1C13E')  # Florian Pritz
 
 package() {
