--- a/xorg/xorg-xclock/PKGBUILD
+++ b/xorg/xorg-xclock/PKGBUILD
@@ -1,17 +1,17 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer: Jan de Groot <jgc@archlinux.org>
+# Maintainer: Andreas Radke <andyrtr@archlinux.org>
 
 pkgname=xorg-xclock
-pkgver=1.0.9
-pkgrel=2
+pkgver=1.1.1
+pkgrel=1
 pkgdesc="X clock"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://xorg.freedesktop.org/"
 license=('custom')
 depends=('libx11' 'libxmu' 'libxaw' 'libxrender' 'libxft' 'libxkbfile')
 makedepends=('xorg-util-macros')
-source=(https://xorg.freedesktop.org/archive/individual/app/xclock-${pkgver}.tar.bz2{,.sig})
-sha512sums=('fcbac0b4ab1cea4ae0751ce1c0c6302048e5d98d459873c7580e4ca786ec49fa27f73e5831bdfe135abb5cfeabe886456276e9d01351ea7905c606f40f84522d'
+source=(https://xorg.freedesktop.org/archive/individual/app/xclock-${pkgver}.tar.xz{,.sig})
+sha512sums=('059ea986bc7537c2796e8855676e8357bd8a7852fbac0839b3f8a9e3ffa088de41bc4e4961973353f0a7b7293366b81bc764d74f3dc4e90e361da06185d976e7'
             'SKIP')
 validpgpkeys=('4A193C06D35E7C670FA4EF0BA2FB9E081F2D130E') # "Alan Coopersmith <alan.coopersmith@oracle.com>"
 
