--- a/cairo/PKGBUILD
+++ b/cairo/PKGBUILD
@@ -5,7 +5,7 @@
 
 pkgname=cairo
 pkgver=1.17.6
-pkgrel=1
+pkgrel=2
 pkgdesc="2D graphics library with support for multiple output devices"
 url="https://cairographics.org/"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -25,6 +25,9 @@ pkgver() {
 
 prepare() {
   cd cairo
+
+  # https://bugs.archlinux.org/task/74354
+  git cherry-pick -n ff4fd6f960deb7afdac233465a1f4e807234ad15
 }
 
 build() {
