* add open-isns to powerpc & riscv64

--- a/open-isns/PKGBUILD
+++ b/open-isns/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=open-isns
 pkgver=0.101
 pkgrel=1
 pkgdesc='iSNS server and client for Linux'
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 depends=('openssl')
 url='https://github.com/gonzoleeman/open-isns'
 license=('GPL')
