--- a/open-iscsi/PKGBUILD
+++ b/open-iscsi/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=open-iscsi
 pkgver=2.1.6
 pkgrel=1
 pkgdesc='iSCSI userland tools'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.open-iscsi.com/'
 license=('GPL')
 makedepends=('systemd')
