--- a/libiscsi/PKGBUILD
+++ b/libiscsi/PKGBUILD
@@ -3,11 +3,11 @@
 # Contributor: Patryk Kowalczyk <patryk@kowalczyk.ws>
 pkgname=libiscsi
 pkgver=1.19.0
-pkgrel=2
+pkgrel=2.1
 makedepends=('git')
 depends=('glibc' 'popt' 'libgcrypt')
 pkgdesc="Clientside library to implement the iSCSI protocol"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://github.com/sahlberg/libiscsi"
 license=('LGPL')
 source=(libiscsi::git+https://github.com/sahlberg/libiscsi.git#tag=${pkgver})
