--- a/dtc/PKGBUILD
+++ b/dtc/PKGBUILD
@@ -4,14 +4,14 @@
 
 pkgname=dtc
 pkgver=1.6.1
-pkgrel=3
+pkgrel=4
 pkgdesc='Device Tree Compiler'
 url='https://www.devicetree.org/'
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL2)
+depends=(libyaml)
 makedepends=(swig python)
 checkdepends=(valgrind)
-options=(!makeflags)
 source=(https://www.kernel.org/pub/software/utils/dtc/dtc-$pkgver.tar.xz
         python310.patch)
 sha256sums=('65cec529893659a49a89740bb362f507a3b94fc8cd791e76a8d6a2b6f3203473'
