--- a/libcacard/PKGBUILD
+++ b/libcacard/PKGBUILD
@@ -6,6 +6,7 @@ pkgver=2.7.0
 pkgrel=2
 pkgdesc='(Common Access Card) library thar provides emulation of smart cards to a virtual card reader running in a guest virtual machine'
 arch=(x86_64 powerpc64le)
+arch=(powerpc riscv64)
 license=(GPL2)
 url='https://www.spice-space.org/page/Libcacard'
 depends=(nss glib2)
