* add phodav to powerpc & riscv64

--- a/phodav/PKGBUILD
+++ b/phodav/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=phodav
 pkgver=2.5
 pkgrel=1
 pkgdesc="WebDav server implementation using libsoup (RFC 4918)"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://wiki.gnome.org/phodav"
 license=('LGPL2.1')
 depends=('avahi' 'libsoup' 'systemd')
