--- a/seabios/PKGBUILD
+++ b/seabios/PKGBUILD
@@ -1,19 +1,17 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Tobias Powalowski <tpowa@archlinux.org>
 
-# ATTENTION:
-#  currently cannot be built on ppc64le, thus we pull the any package from archlinux
-#  and add it to the repo manually
-#     https://www.archlinux.org/packages/extra/any/seabios/
-
 pkgname=seabios
-pkgver=1.14.0
+pkgver=1.16.0
 pkgrel=1
 pkgdesc="A 16-bit x86 bios"
-arch=('any')
+arch=(any)
 url="https://www.coreboot.org/SeaBIOS"
 license=('GPL3' 'LGPL3')
 makedepends=('iasl' 'python' 'inetutils')
+makedepends_powerpc=('x86_64-pc-linux-gnu-gcc')
+makedepends_powerpc64le=('x86_64-pc-linux-gnu-gcc')
+makedepends_riscv64=('x86_64-pc-linux-gnu-gcc')
 options=('!makeflags' '!strip')
 _tag=rel-$pkgver
 source=(seabios-$pkgver.zip::https://github.com/coreboot/seabios/archive/$_tag.zip
@@ -30,7 +28,7 @@ source=(seabios-$pkgver.zip::https://github.com/coreboot/seabios/archive/$_tag.z
         config.vga.ramfb
         config.vga.virtio
         reproducible-version.patch)
-sha1sums=('610800ddb6e8abe62e4802e47cbc0e6cf9f80b20'
+sha1sums=('9e04be81849d52c230e5461f1a2ecacb651a730f'
           '5f2adb09c9006def1719b8cbd4792f14a7c7f7c9'
           '7a4ec70237476c7cdd78589b069d0d39dfeaa8eb'
           '05b912a291994226049103cbe6754976cc03532d'
@@ -61,21 +59,23 @@ prepare() {
 
   patch -p1 < ../reproducible-version.patch # FS#67178
 
+  sed "s@CROSS_PREFIX=@CROSS_PREFIX=x86_64-pc-linux-gnu-@g" -i Makefile
+
   rm -rf binaries
   mkdir binaries
 
-  echo "ArchLinux ${pkgver}-${pkgrel}" > .version
+  echo "ArchPOWER ${pkgver}-${pkgrel}" > .version
 }
 
 build() {
   cd seabios-$_tag
   # seabios
-  build_bios ${srcdir}/config.csm Csm16.bin bios-csm.bin
-  build_bios ${srcdir}/config.coreboot bios.bin.elf bios-coreboot.bin
-  build_bios ${srcdir}/config.seabios-128k bios.bin bios.bin
-  build_bios ${srcdir}/config.seabios-256k bios.bin bios-256k.bin
+  build_bios "${srcdir}"/config.csm Csm16.bin bios-csm.bin
+  build_bios "${srcdir}"/config.coreboot bios.bin.elf bios-coreboot.bin
+  build_bios "${srcdir}"/config.seabios-128k bios.bin bios.bin
+  build_bios "${srcdir}"/config.seabios-256k bios.bin bios-256k.bin
   # seavgabios
-  for config in ${srcdir}/{config.vga.isavga,config.vga.stdvga,config.vga.cirrus,config.vga.qxl,config.vga.vmware,config.vga.ramfb,config.vga.virtio,config.vga.bochs-display}; do
+  for config in "${srcdir}"/{config.vga.isavga,config.vga.stdvga,config.vga.cirrus,config.vga.qxl,config.vga.vmware,config.vga.ramfb,config.vga.virtio,config.vga.bochs-display}; do
     name=${config#*config.vga.}
     build_bios ${config} vgabios.bin vgabios-${name}.bin out/vgabios.bin
   done
@@ -85,4 +85,3 @@ package() {
   cd seabios-$_tag
   install -Dm644 -t "${pkgdir}/usr/share/qemu" binaries/*.bin
 }
-
