--- a/cmake/PKGBUILD
+++ b/cmake/PKGBUILD
@@ -4,19 +4,17 @@
 # Contributor: Pierre Schmitz <pierre@archlinux.de>
 
 pkgname=cmake
-pkgver=3.23.0
+pkgver=3.23.1
 pkgrel=1
 pkgdesc='A cross-platform open-source make system'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://www.cmake.org/"
 license=('custom')
 depends=('curl' 'libarchive' 'hicolor-icon-theme' 'jsoncpp' 'libjsoncpp.so' 'libuv' 'rhash')
-makedepends=('qt6-base' 'python-sphinx')
-makedepends_powerpc=('emacs')
-makedepends_powerpc64le=('emacs')
+makedepends=('qt6-base' 'python-sphinx' 'emacs')
 optdepends=('qt6-base: cmake-gui')
 source=("https://www.cmake.org/files/v${pkgver%.*}/${pkgname}-${pkgver}.tar.gz")
-sha512sums=('bcde8f2bf2fff6c4ab37a28c115b4b53d5fef0d4e38305420966cbd9f0026a4ffdcd4137f917a83458c1f380a137f7a7bd78f6fbd4d92fdcc5cf1dfbe4c02003')
+sha512sums=('94893f888c0cbfc58e54a0bd65d6c0697fe4a0e95c678b7cb35e7dc8854d57eb360bfc952750f97983348817f847f6df85903f21a5857b1a3880b2a7eb6cc029')
 
 build() {
   cd ${pkgname}-${pkgver}
@@ -37,9 +35,6 @@ package() {
   make DESTDIR="${pkgdir}" install
 
   rm -r "$pkgdir"/usr/share/doc/cmake/html/_sources
-  
-  [ ! "${CARCH}" = 'powerpc' -a ! "${CARCH}" = 'riscv64' ] && \
-    emacs -batch -f batch-byte-compile \
-    "${pkgdir}"/usr/share/emacs/site-lisp/cmake-mode.el
+  emacs -batch -f batch-byte-compile "${pkgdir}"/usr/share/emacs/site-lisp/cmake-mode.el
   install -Dm644 Copyright.txt "${pkgdir}"/usr/share/licenses/${pkgname}/LICENSE
 }
