* update librevenge to 0.0.4-4

--- a/librevenge/PKGBUILD
+++ b/librevenge/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=librevenge
 pkgver=0.0.4
 pkgrel=4
 pkgdesc="library for REVerses ENGineered formats filters"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://sf.net/p/libwpd/librevenge/"
 license=('MPL')
 depends=('boost-libs')
