--- a/libwpd/PKGBUILD
+++ b/libwpd/PKGBUILD
@@ -5,7 +5,7 @@ pkgname=libwpd
 pkgver=0.10.3
 pkgrel=3
 pkgdesc="Library for importing WordPerfect (tm) documents"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://libwpd.sourceforge.net/"
 license=('LGPL')
 depends=('gcc-libs' 'zlib' 'librevenge')
