--- a/libwpg/PKGBUILD
+++ b/libwpg/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=libwpg
 pkgver=0.3.3
 pkgrel=2
 pkgdesc="Library for importing and converting Corel WordPerfect(tm) Graphics images."
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://libwpg.sourceforge.net/"
 license=('LGPL')
 depends=('libwpd' 'perl' 'librevenge')
