* update libcdr to 0.1.7-4

--- a/libcdr/PKGBUILD
+++ b/libcdr/PKGBUILD
@@ -5,9 +5,9 @@
 
 pkgname=libcdr
 pkgver=0.1.7
-pkgrel=3
+pkgrel=4
 pkgdesc="CorelDraw file format importer library for LibreOffice"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://wiki.documentfoundation.org/DLP/Libraries/libcdr"
 license=('GPL2' 'LGPL2.1' 'MPL')
 depends=('libwpd' 'lcms2' 'icu' 'librevenge')
