--- a/liblangtag/PKGBUILD
+++ b/liblangtag/PKGBUILD
@@ -3,9 +3,9 @@
 
 pkgname=liblangtag
 pkgver=0.6.3
-pkgrel=2
+pkgrel=2.1
 pkgdesc="interface library to access/deal with tags for identifying languages"
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://bitbucket.org/tagoh/liblangtag/wiki/Home"
 license=('LGPL3' 'MPL') # actually MPL2.0
 depends=('libxml2' 'glib2')
@@ -16,7 +16,7 @@ sha256sums=('1f12a20a02ec3a8d22e54dedb8b683a43c9c160bda1ba337bf1060607ae733bd')
 
 build() {
   cd "$pkgname-$pkgver"
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --build=${CHOST}
   make
 }
 
