* update libvisio to 0.1.7-7

--- a/libvisio/PKGBUILD
+++ b/libvisio/PKGBUILD
@@ -6,9 +6,9 @@
 
 pkgname=libvisio
 pkgver=0.1.7
-pkgrel=6
+pkgrel=7
 pkgdesc='Library providing ability to interpret and import visio diagrams'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://wiki.documentfoundation.org/DLP/Libraries/libvisio"
 license=('LGPL')
 depends=('libwpd' 'libwpg' 'libxml2' 'icu' 'librevenge')
@@ -18,7 +18,7 @@ sha256sums=('8faf8df870cb27b09a787a1959d6c646faa44d0d8ab151883df408b7166bea4c')
 
 build() {
   cd $pkgname-$pkgver
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --build=${CHOST}
   make
 }
 
