* update spice to 0.15.0-1

--- a/spice/PKGBUILD
+++ b/spice/PKGBUILD
@@ -7,15 +7,18 @@ pkgver=0.15.0
 pkgrel=1
 pkgdesc="SPICE server"
 arch=(x86_64 powerpc64le powerpc)
+arch=(riscv64)
 url="https://www.spice-space.org"
 license=('LGPL2.1')
 depends=('pixman' 'opus' 'libjpeg-turbo' 'glib2' 'libsasl' 'lz4')
-makedepends=('meson' 'spice-protocol' 'libcacard')
+makedepends=('meson' 'spice-protocol' 'libcacard' 'python-six' 'python-pyparsing')
 checkdepends=('gdk-pixbuf2' 'glib-networking')
 provides=('libspice-server.so')
-source=("https://www.spice-space.org/download/releases/spice-server/$pkgname-$pkgver.tar.bz2"{,.sig})
+source=("https://www.spice-space.org/download/releases/spice-server/$pkgname-$pkgver.tar.bz2"{,.sig}
+        'build-Correctly-check-for-Python-modules.patch')
 sha256sums=('b320cf8f4bd2852750acb703c15b72856027e5a8554f8217dfbb3cc09deba0f5'
-            'SKIP')
+            'SKIP'
+            'fa9a97c2f081c3fcde798f3dd381303c328adb3658ea101c969973951db3e4db')
 validpgpkeys=('206D3B352F566F3B0E6572E997D9123DE37A484F') # Victor Toso <victortoso@redhat.com>
 
 prepare() {
@@ -23,6 +26,9 @@ prepare() {
   # Consider removing the following sed once this issue is resolved:
   # https://gitlab.freedesktop.org/spice/spice/-/issues/62
   sed -i "/doxygen.sh/d" $pkgname-$pkgver/meson.build
+
+  cd ${pkgname}-${pkgver}
+  patch -Np1 -i ${srcdir}/build-Correctly-check-for-Python-modules.patch
 }
 
 build() {
@@ -37,3 +43,4 @@ check() {
 package() {
   DESTDIR="$pkgdir" meson install -C build
 }
+
