* update qt5-base to 5.15.3+kde+r137-2

--- a/qt5/qt5-base/PKGBUILD
+++ b/qt5/qt5-base/PKGBUILD
@@ -6,7 +6,7 @@ pkgbase=qt5-base
 pkgname=(qt5-base qt5-xcb-private-headers)
 _basever=5.15.3
 pkgver=5.15.3+kde+r137
-pkgrel=1
+pkgrel=2
 _commit=ee7a89b2c4750bc3cabe4aeb466645d6ac2a872b
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.qt.io'
@@ -37,6 +37,7 @@ sha256sums=('SKIP'
             '5411edbe215c24b30448fac69bd0ba7c882f545e8cf05027b2b6e2227abc5e78'
             '4b93f6a79039e676a56f9d6990a324a64a36f143916065973ded89adc621e094'
             '797c1930756e7a63074b7fdb85ad911f1a8e006d55008c5da4c6b39126c24a71')
+options=(!distcc)
 
 pkgver() {
   cd $_pkgfqn
