* update pipewire to 1:0.3.50-1

--- a/pipewire/PKGBUILD
+++ b/pipewire/PKGBUILD
@@ -7,7 +7,8 @@ pkgbase=pipewire
 pkgname=(pipewire alsa-card-profiles pipewire-docs pipewire-alsa pipewire-jack
          pipewire-pulse gst-plugin-pipewire pipewire-zeroconf pipewire-v4l2
          pipewire-x11-bell)
-pkgver=0.3.48
+_commit=64cf5e80e6240284e6b757907b900507fe56f1b5  # tags/0.3.50
+pkgver=0.3.50
 pkgrel=1
 epoch=1
 pkgdesc="Low-latency audio/video router and processor"
@@ -23,15 +24,12 @@ makedepends_riscv64=(libldac)
 makedepends_x86_64=(libldac)
 checkdepends=(desktop-file-utils)
 options=(debug)
-_commit=6c4d3a51583f823b789b0de2df1e36d6c2f8dff8  # tags/0.3.48
-source=(
-  "git+https://gitlab.freedesktop.org/pipewire/pipewire.git#commit=$_commit"
-)
+source=("git+https://gitlab.freedesktop.org/pipewire/pipewire.git#commit=$_commit")
 sha256sums=('SKIP')
 
 pkgver() {
   cd pipewire
-  git describe --tags | sed 's/[^-]*-g/r&/;s/-/+/g'
+  git describe --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
