* update ffmpeg to 2:5.0-6

--- a/ffmpeg/PKGBUILD
+++ b/ffmpeg/PKGBUILD
@@ -6,7 +6,7 @@
 
 pkgname=ffmpeg
 pkgver=5.0
-pkgrel=5
+pkgrel=6
 epoch=2
 pkgdesc='Complete solution to record, convert and stream audio and video'
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -113,7 +113,7 @@ b2sums=('SKIP'
         '3f2ee7606500fa9444380d138959cd2bccfbba7d34629a17f4f6288c6bde29e931bbe922a7c25d861f057ddd4ba0b095bbd675c1930754746d5dd476b3ccbc13'
         'd7a5d2180e523d8c593686d9f3effa73c3d5a8d450a8ec0b64018a3f9f944fe77bb1690ad9a33625704c0eda3d9bccf5e7aa95b3db12552bfbeb7f22a748fdf0')
 
-options=(!distcc)
+options=(debug !distcc)
 
 prepare() {
   cd ffmpeg
