* update wpewebkit to 2.36.0-1

--- a/wpewebkit/PKGBUILD
+++ b/wpewebkit/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 
 pkgname=wpewebkit
-pkgver=2.34.6
+pkgver=2.36.0
 pkgrel=1
 pkgdesc="Web content engine for embedded devices"
 url="https://wpewebkit.org"
@@ -56,3 +56,5 @@ package() {
 }
 
 # vim:set sw=2 et:
+sha256sums=('096aa9f87d9bfbfc80f558388a86721cdcc508b42ddef10bd270aec9aee96d5a'
+            'SKIP')
