* update libmwaw to 0.3.21-2

--- a/libmwaw/PKGBUILD
+++ b/libmwaw/PKGBUILD
@@ -2,31 +2,46 @@
 # Maintainer: AndyRTR <andyrtr@archlinux.org>
 # Contributor: Thomas Arnhold <thomas at arnhold dot org>
 
-pkgname=libmwaw
-pkgver=0.3.20
-pkgrel=1
+pkgbase=libmwaw
+pkgname=('libmwaw' 'libmwaw-docs')
+pkgver=0.3.21
+pkgrel=2
 pkgdesc="Import library for some old mac text documents."
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://sourceforge.net/projects/libmwaw/"
 license=('LGPL2.1' 'MPL')
-depends=('librevenge')
-makedepends=('boost' 'doxygen')
+makedepends=('librevenge'
+             'boost' 'doxygen')
 source=(https://sourceforge.net/projects/${pkgname}/files/${pkgname}/${pkgname}-${pkgver}/${pkgname}-${pkgver}.tar.xz)
-sha1sums=('e6e96590300c206edbda14ad4bc18fb5b4ad0c34')
+sha1sums=('198d281b63ddfe0a6d3c9678ffe62b458fbbdabf')
 
 build() {
   cd "${pkgname}"-${pkgver}
-  ./configure --prefix=/usr
+  ./configure --prefix=/usr --build=${CHOST}
   make
 }
-
 
 check() {
   cd "${pkgname}"-${pkgver}
   make check
 }
 
-package() {
+package_libmwaw() {
+
+  depends=('librevenge')
+
   cd "${pkgname}"-${pkgver}
   make DESTDIR="$pkgdir" install
+
+  # Split -docs
+  mkdir -p ../docs/usr/share
+  mv -t ../docs/usr/share "$pkgdir"/usr/share/doc
+  rmdir "$pkgdir"/usr/share
+}
+
+package_libmwaw-docs() {
+
+  pkgdesc+=" (documentation)"
+
+  mv -t "$pkgdir" docs/*
 }
