* update lapack to 3.10.1-1

--- a/lapack/PKGBUILD
+++ b/lapack/PKGBUILD
@@ -5,16 +5,16 @@
 # Contributor: Jason Taylor <jftaylor21@gmail.com>
 
 pkgbase=lapack
-pkgname=(lapack blas cblas lapacke) # lapack-doc)
-pkgver=3.10.0
+pkgname=(lapack blas cblas lapacke lapack-doc)
+pkgver=3.10.1
 pkgrel=1
 url='https://www.netlib.org/lapack'
 pkgdesc='Linear Algebra PACKage'
-makedepends=(gcc-fortran cmake python) # doxygen)
+makedepends=(gcc-fortran cmake python doxygen)
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(custom)
 source=(https://github.com/Reference-LAPACK/lapack/archive/v$pkgver/$pkgname-$pkgver.tar.gz LICENSE.blas)
-sha256sums=('328c1bea493a32cac5257d84157dc686cc3ab0b004e2bea22044e0a59f6f8a19'
+sha256sums=('cd005cd021f144d7d5f7f33c943942db9f03a28d110d6a3b80d718a295f7f714'
             '2420cd1331c5754071966389b26e6196c5cb086a2ade0080953af62e0c6d4107')
 
 build() {
@@ -31,7 +31,7 @@ build() {
 
 # Build man pages
   cd $pkgname-$pkgver
-  #doxygen DOCS/Doxyfile_man
+  doxygen DOCS/Doxyfile_man
 }
 
 package_lapack() {
