* update glpk to 5.0-1

--- a/glpk/PKGBUILD
+++ b/glpk/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=glpk
 pkgver=5.0
 pkgrel=1
 pkgdesc="GNU Linear Programming Kit : solve LP, MIP and other problems."
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc)
 url="https://www.gnu.org/software/glpk/glpk.html"
 license=('GPL')
 depends=('gmp')
