* update coin-or-cgl to 0.60.5-1

--- a/coin-or-cgl/PKGBUILD
+++ b/coin-or-cgl/PKGBUILD
@@ -4,39 +4,29 @@
 # Contributor: Daniel Ehlers <danielehlers@mindeye.net>
 
 pkgname=coin-or-cgl
-pkgver=0.60.3
+pkgver=0.60.5
 pkgrel=1
-pkgdesc="COIN-OR Cut Generation Library"
-arch=(x86_64 powerpc64le)
-url="https://projects.coin-or.org/Cgl"
+pkgdesc='COIN-OR Cut Generation Library'
+arch=(x86_64 powerpc64le powerpc)
+url='https://github.com/coin-or/Cgl'
 license=(EPL)
 groups=(coin-or)
 depends=(coin-or-clp)
-source=("https://www.coin-or.org/download/source/Cgl/Cgl-${pkgver}.tgz")
-sha256sums=('cf11e3476d2182040cec412abb232d8bafa12ff5b619eca3b7b9ac1d220476c8')
+source=($pkgname-$pkgver.tar.gz::https://github.com/coin-or/Cgl/archive/refs/tags/releases/$pkgver.tar.gz)
+sha256sums=('5a2e7ca380425b3d7279d0759c625a367d06ec8293698b59f82fae38ae5df64e')
 
 build() {
-  cd Cgl-$pkgver/Cgl
-  COIN_SKIP_PROJECTS="Sample" \
-  ./configure --prefix=/usr \
-              --with-osi-lib="$(pkg-config --libs osi)" \
-              --with-osi-incdir="/usr/include/coin/" \
-              --with-clp-lib="$(pkg-config --libs clp)" \
-              --with-clp-incdir="/usr/include/coin/" \
-              --with-coinutils-lib="$(pkg-config --libs coinutils)" \
-              --with-coinutils-incdir="/usr/include/coin/" \
-              --enable-dependency-linking \
-	      --build=${CHOST}
+  cd Cgl-releases-$pkgver
+  ./configure --prefix=/usr --build=${CHOST}
   make
 }
 
 check() {
-  cd Cgl-$pkgver/Cgl
+  cd Cgl-releases-$pkgver
   make test
 }
 
 package() {
-  cd Cgl-$pkgver/Cgl
-  PKG_CONFIG_LIBDIR="$pkgdir"/usr/lib/pkgconfig/ \
+  cd Cgl-releases-$pkgver
   make DESTDIR="$pkgdir" install
 }
