* update nauty to 27r3-1

--- a/nauty/PKGBUILD
+++ b/nauty/PKGBUILD
@@ -2,20 +2,20 @@
 # Maintainer: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=nauty
-pkgver=27r1
-pkgrel=2
-pkgdesc="A program for computing automorphism groups of graphs and digraphs"
-arch=(x86_64 powerpc64le)
-url="http://pallini.di.uniroma1.it/"
+pkgver=27r3
+pkgrel=1
+pkgdesc='A program for computing automorphism groups of graphs and digraphs'
+arch=(x86_64 powerpc64le powerpc)
+url='http://pallini.di.uniroma1.it/'
 license=(Apache)
 depends=(glibc)
 source=(http://pallini.di.uniroma1.it/nauty$pkgver.tar.gz)
-sha256sums=('76ca5d196e402c83a987f90c28ff706bcc5a333bb4a8fbb979a62d3b99c34e77')
+sha256sums=('4f0665b716a53f7a14ea2ae30059f23d064ce3fe4c12c013404ef6e1ee0b88c2')
 
 build() {
   cd nauty$pkgver
 
-  export CFLAGS+=' -fPIC'
+  export CFLAGS+=' -fPIC -ffat-lto-objects'
   ./configure --enable-generic
   make
 }
