* update chromium to 100.0.4896.127-2

--- a/chromium/PKGBUILD
+++ b/chromium/PKGBUILD
@@ -4,8 +4,8 @@
 # Contributor: Daniel J Griffiths <ghost1227@archlinux.us>
 
 pkgname=chromium
-pkgver=97.0.4692.99
-pkgrel=3.1
+pkgver=100.0.4896.127
+pkgrel=2
 _launcher_ver=8
 _gcc_patchset=4
 pkgdesc="A web browser built for speed, simplicity, and security"
@@ -16,7 +16,7 @@ depends=('gtk3' 'nss' 'alsa-lib' 'xdg-utils' 'libxss' 'libcups' 'libgcrypt'
          'ttf-liberation' 'systemd' 'dbus' 'libpulse' 'pciutils' 'libva'
          'desktop-file-utils' 'hicolor-icon-theme')
 makedepends=('python' 'gn' 'ninja' 'clang' 'lld' 'gperf' 'nodejs' 'pipewire'
-             'java-runtime-headless')
+             'java-runtime-headless=11')
 optdepends=('pipewire: WebRTC desktop sharing under Wayland'
             'kdialog: support for native dialogs in Plasma'
             'org.freedesktop.secrets: password storage backend on GNOME / Xfce'
@@ -25,49 +25,63 @@ options=('!lto') # Chromium adds its own flags for ThinLTO
 source=(https://commondatastorage.googleapis.com/chromium-browser-official/$pkgname-$pkgver.tar.xz
         https://github.com/foutrelis/chromium-launcher/archive/v$_launcher_ver/chromium-launcher-$_launcher_ver.tar.gz
         https://github.com/stha09/chromium-patches/releases/download/chromium-${pkgver%%.*}-patchset-$_gcc_patchset/chromium-${pkgver%%.*}-patchset-$_gcc_patchset.tar.xz
-        wayland-fix-binding-to-wrong-version.patch
+        webcodecs-stop-using-AudioOpusEncoder.patch
+        webrtc-check-existence-of-cursor-metadata.patch
+        enable-GlobalMediaControlsCastStartStop.patch
         sql-make-VirtualCursor-standard-layout-type.patch
-        unexpire-accelerated-video-decode-flag.patch
         use-oauth2-client-switches-as-default.patch
-        chromium-breakpad-fix-build-with-glibc-2.34.patch
         xxx-ppc64le-4k-pages.patch
         xxx-ppc64le-libvpx.patch
         xxx-ppc64le-sandbox-linux-stat.patch
         xxx-ppc64le-support.patch
         xxx-ppc64le-swiftshader.patch
-        libc_malloc.patch
-        cursed^Uscoped_file.patch
-        fix-bits-stdint-intn-include.patch
+        chromium-93-ffmpeg-4.4.patch
         fix-narrowing-cast.patch
-        no-execinfo.patch
-        no-getcontext.patch
+        fix-gnu-libc-version-usage.patch
+        fix-missing-TEMP_FAILURE_RETRY-macro.patch
+        chromium-revert-drop-of-system-java.patch
+        chromium-system-nodejs.patch
+        unbundle-ffmpeg-av_stream_get_first_dts.patch
+        unbundled-cross-toolchain.patch
+        cursed^Uscoped_file.patch
+        chromium-100-SCTHashdanceMetadata-move.patch
+        remove-sys-cdefs-includes.patch
         sandbox-membarrier.patch
         sandbox-sched_getparam.patch
-        webrtc-include.patch
-        webrtc-size_t.patch)
-sha256sums=('c91bae205705b367f2cfc1f72ce1ee99b2ceb5edfc584e15c60a6ab5ff01ecba'
+        webrtc-size_t.patch
+        browser-size_t.patch
+        fix-swiftshader-llvm-musl-config.patch
+        libc_malloc.patch)
+sha256sums=('4710e3453c972c91e68a21f6b0b76ba73d4d617f299a5208615ed6e41b1af84d'
             '213e50f48b67feb4441078d50b0fd431df34323be15be97c55302d3fdac4483a'
-            '7af5c0a55a20c0fb496b2f4448d89203a83bb1914754d864460e55e68731ef0b'
-            '29541840921302060f712838ba460cd7e988148af3ce3c9dc45437fc78442a67'
-            'dd317f85e5abfdcfc89c6f23f4c8edbcdebdd5e083dcec770e5da49ee647d150'
-            '2a97b26c3d6821b15ef4ef1369905c6fa3e9c8da4877eb9af4361452a425290b'
+            'a6120e7d4eb5e131b87b6ab3b922e0c6cd78e15501e54cfb2019875173688d80'
+            '064daaa2b9d95b96ec04d8ddebf4af441f92263d123365b58fe73966866080af'
+            '88b2c8d9c6c1917f6632453f18aad7a3fd94d605eecb6c77ae2394ac5856ba95'
+            '779fb13f2494209d3a7f1f23a823e59b9dded601866d3ab095937a1a04e19ac6'
+            'b94b2e88f63cfb7087486508b8139599c89f96d7a4181c61fec4b4e250ca327a'
             'e393174d7695d0bafed69e868c5fbfecf07aa6969f3b64596d0bae8b067e1711'
-            'd1ad185e25a62d50bbed0dbf131e52bead8a52ccc63a53642b3a4f62056a5458'
-            'c77523a0884cd7b821826c42475d10d8576ef5edf1022e2657aaf455317bd293'
+            'eb1b0b261d17fe333a532001742e840cf6f1fdd21af2093636f2c58e8103c002'
             '6b7ad5cd5d7d61b5441810688fc5bd99cb8198291b2252451d352a620a2e09bb'
             '16361d737c14135e464bf52e09d0b79c0e9ef84c364253e08f435e8e72d7b5c9'
-            '796d4c650ab71b6ba0ef043b060398673cb252c96c194e0bbd0a14cb7b8f94c7'
+            'b76d253de156ad0277493dda6b7ab11de3f90ea03316745d84082d52018c82f9'
             'be9416182beb25f0835bae1dad5a26786f694dbda2e5106f83714be42add653a'
-            '612543dcef7fc6e45e1be2f3107d55d6194b20d39b7fd9f128050273eee91f40'
-            '6cfec4a32160df642ffa4b3c1e10ba19e94f1004bac65a349fa273b0f684b8ac'
-            'debec51fb6eb66e9b3d7b76476900fcf94bdc8d703b853402fa15b65c1291725'
+            '1a9e074f417f8ffd78bcd6874d8e2e74a239905bf662f76a7755fa40dc476b57'
             '771395e3e84a4a1627945112b8c100c898221e04d86b76d4cff946530010e1a4'
-            'a76ec1a929b54d79b1fa643036fcbd9ff2c2cc99e7d7e1573122ca0b5e760347'
-            '26111345b8d9bf87f7336c35aa401ff2f1b2911519e7b725e224c59f33593378'
+            '320794a9d5a376e34f223805018160fb7a202d98a7c6080737e7de3b86b8d583'
+            '0f945626f07a6eda7e3bea956397c79e3e67a5a4ba55e86553a9132792513fa1'
+            '4f74164ad790b00389565c638bf3e752017ca7ef4bb77a86a17b6e498de501de'
+            'd6dc5081c74f9025e672ea5fde6629b8d53157e0d0528e3a41004250fdf823be'
+            '1f0c1a7a1eb67d91765c9f28df815f58e1c6dc7b37d0acd4d68cac8e5515786c'
+            'c25d166fdd7d7b4e1065c23955dc887a49cf78238c756e51c614999d5c48354e'
+            '6cfec4a32160df642ffa4b3c1e10ba19e94f1004bac65a349fa273b0f684b8ac'
+            '37e4fc4794b4d0d8e73f1de08b0349c2c8b336abcc543a8933bddd3a28f95863'
+            '649640f75a3da1b5e7d9a03a4b3e71ee2bac6fda2ba62cf9535a6fc8b31f308e'
             'ba514c06cc03d728d2c1727fac85f2bbe953fe9720dcf8c2fa8de0ae4385e33b'
             'f5961ae09ddbdda69713d82e631bc3dab4884629f32f60ba201189c2c4269b39'
-            '80d9910ec018c517e4316419939aac9751ddae13b3cadf4712fdac770a899e81'
-            '83904114e89c2b1ed55814bc07ba5a0ad198010b3cac9f223c72ac4fbac3646b')
+            '83904114e89c2b1ed55814bc07ba5a0ad198010b3cac9f223c72ac4fbac3646b'
+            'd2028d47da62f054eb83ab692f8801d726f87d22c9a96e7b96c779ed0aba9287'
+            '26a818ccbf1393b87c2d99e45413fb9296219c88199c6924a319eb192ce5be62'
+            '07e382665b70bb546336c0a6b73981cd14606969893f7d840c36b952891035be')
 
 # Possible replacements are listed in build/linux/unbundle/replace_gn_files.py
 # Keys are the names in the above script; values are the dependencies in Arch
@@ -122,33 +136,40 @@ prepare() {
   # runtime -- this allows signing into Chromium without baked-in values
   patch -Np1 -i ../use-oauth2-client-switches-as-default.patch
 
-  # https://crbug.com/1207478
-  patch -Np0 -i ../unexpire-accelerated-video-decode-flag.patch
-
   # Upstream fixes
-  patch -Np1 -i ../wayland-fix-binding-to-wrong-version.patch
+  patch -Np1 -i ../webcodecs-stop-using-AudioOpusEncoder.patch
+  patch -Np1 -d third_party/webrtc <../webrtc-check-existence-of-cursor-metadata.patch
+
+  # Revert kGlobalMediaControlsCastStartStop enabled by default
+  # https://crbug.com/1314342
+  patch -Rp1 -F3 -i ../enable-GlobalMediaControlsCastStartStop.patch
 
   # https://chromium-review.googlesource.com/c/chromium/src/+/2862724
   patch -Np1 -i ../sql-make-VirtualCursor-standard-layout-type.patch
 
-  patch -Np2 -i ${srcdir}/chromium-breakpad-fix-build-with-glibc-2.34.patch
-
-  # powerpc64le stuff
+  # powerpc64le
   patch -Np1 -i ${srcdir}/xxx-ppc64le-4k-pages.patch
   patch -Np1 -i ${srcdir}/xxx-ppc64le-libvpx.patch
   patch -Np1 -i ${srcdir}/xxx-ppc64le-sandbox-linux-stat.patch
   patch -Np1 -i ${srcdir}/xxx-ppc64le-support.patch
   patch -Np1 -i ${srcdir}/xxx-ppc64le-swiftshader.patch
-  patch -Np1 -i ${srcdir}/libc_malloc.patch
-  patch -Np1 -i ${srcdir}/cursed^Uscoped_file.patch
-  patch -Np1 -i ${srcdir}/fix-bits-stdint-intn-include.patch
   patch -Np1 -i ${srcdir}/fix-narrowing-cast.patch
-  patch -Np1 -i ${srcdir}/no-execinfo.patch
-  patch -Np1 -i ${srcdir}/no-getcontext.patch
+  patch -Np1 -i ${srcdir}/fix-gnu-libc-version-usage.patch
+  patch -Np1 -i ${srcdir}/fix-missing-TEMP_FAILURE_RETRY-macro.patch
+  #patch -Np1 -i ${srcdir}/chromium-93-ffmpeg-4.4.patch
+  patch -Np1 -i ${srcdir}/chromium-revert-drop-of-system-java.patch
+  patch -Np1 -i ${srcdir}/chromium-system-nodejs.patch
+  #patch -Np1 -i ${srcdir}/unbundle-ffmpeg-av_stream_get_first_dts.patch
+  patch -Np1 -i ${srcdir}/unbundled-cross-toolchain.patch
+  patch -Np1 -i ${srcdir}/cursed^Uscoped_file.patch
+  patch -Np1 -i ${srcdir}/chromium-100-SCTHashdanceMetadata-move.patch
+  patch -Np1 -i ${srcdir}/remove-sys-cdefs-includes.patch
   patch -Np1 -i ${srcdir}/sandbox-membarrier.patch
   patch -Np1 -i ${srcdir}/sandbox-sched_getparam.patch
-  patch -Np1 -i ${srcdir}/webrtc-include.patch
   patch -Np1 -i ${srcdir}/webrtc-size_t.patch
+  patch -Np1 -i ${srcdir}/browser-size_t.patch
+  patch -Np1 -i ${srcdir}/fix-swiftshader-llvm-musl-config.patch
+  patch -Np1 -i ${srcdir}/libc_malloc.patch
 
   # Link to system tools required by the build
   mkdir -p third_party/node/linux/node-linux-x64/bin
@@ -170,7 +191,7 @@ prepare() {
       -delete
   done
 
-  ./build/linux/unbundle/replace_gn_files.py \
+  python ./build/linux/unbundle/replace_gn_files.py \
     --system-libraries "${!_system_libs[@]}"
 
   if [ "${CARCH}" = 'powerpc64le' ]; then
@@ -196,6 +217,7 @@ build() {
     'host_toolchain="//build/toolchain/linux/unbundle:default"'
     'clang_use_chrome_plugins=false'
     'is_official_build=true' # implies is_cfi=true on x86_64
+    'symbol_level=0' # sufficient for backtraces on x86(_64)
     'treat_warnings_as_errors=false'
     'disable_fieldtrial_testing_config=true'
     'blink_enable_generated_code_formatting=false'
@@ -210,15 +232,17 @@ build() {
     'enable_widevine=true'
     'enable_nacl=false'
     "google_api_key=\"$_google_api_key\""
+		'treat_warnings_as_errors=false'
+		'fatal_linker_warnings=false'
   )
 
   if [[ -n ${_system_libs[icu]+set} ]]; then
     _flags+=('icu_use_data_file=false')
   fi
 
-  if check_option strip y; then
-    _flags+=('symbol_level=0')
-  fi
+  case "${CARCH}" in
+    powerpc64le) _flags+=('enable_jxl_decoder=false')
+  esac
 
   # Facilitate deterministic builds (taken from build/config/compiler/BUILD.gn)
   CFLAGS+='   -Wno-builtin-macro-redefined'
@@ -229,13 +253,18 @@ build() {
   CFLAGS+='   -Wno-unknown-warning-option'
   CXXFLAGS+=' -Wno-unknown-warning-option'
 
+  # Let Chromium set its own symbol level
+  CFLAGS=${CFLAGS/-g }
+  CXXFLAGS=${CXXFLAGS/-g }
+
   # https://github.com/ungoogled-software/ungoogled-chromium-archlinux/issues/123
   CFLAGS=${CFLAGS/-fexceptions}
   CFLAGS=${CFLAGS/-fcf-protection}
   CXXFLAGS=${CXXFLAGS/-fexceptions}
   CXXFLAGS=${CXXFLAGS/-fcf-protection}
 
-  # This appears to cause random segfaults
+  # This appears to cause random segfaults when combined with ThinLTO
+  # https://bugs.archlinux.org/task/73518
   CFLAGS=${CFLAGS/-fstack-clash-protection}
   CXXFLAGS=${CXXFLAGS/-fstack-clash-protection}
 
@@ -243,7 +272,7 @@ build() {
   CXXFLAGS=${CXXFLAGS/-Wp,-D_GLIBCXX_ASSERTIONS}
 
   gn gen out/Release --args="${_flags[*]}"
-  ninja -C out/Release chrome chrome_sandbox chromedriver ${MAKEFLAGS}
+  ninja ${MAKEFLAGS} -C out/Release chrome chrome_sandbox chromedriver.unstripped
 }
 
 package() {
@@ -255,8 +284,8 @@ package() {
   cd "$srcdir/$pkgname-$pkgver"
 
   install -D out/Release/chrome "$pkgdir/usr/lib/chromium/chromium"
+  install -D out/Release/chromedriver.unstripped "$pkgdir/usr/bin/chromedriver"
   install -Dm4755 out/Release/chrome_sandbox "$pkgdir/usr/lib/chromium/chrome-sandbox"
-  ln -s /usr/lib/chromium/chromedriver "$pkgdir/usr/bin/chromedriver"
 
   install -Dm644 chrome/installer/linux/common/desktop.template \
     "$pkgdir/usr/share/applications/chromium.desktop"
@@ -278,17 +307,10 @@ package() {
     -e '/^<?xml/,$p' \
     "$pkgdir/usr/share/metainfo/chromium.appdata.xml"
 
-  if [ "${CARCH}" == 'powerpc64le' ]; then
-    cp out/Release/chromedriver{.unstripped,}
-    strip out/Release/chromedriver
-    cp third_party/swiftshader/src/Vulkan/vk_swiftshader_icd.json out/Release/
-  fi
-
   local toplevel_files=(
     chrome_100_percent.pak
     chrome_200_percent.pak
     chrome_crashpad_handler
-    chromedriver
     resources.pak
     v8_context_snapshot.bin
 
@@ -298,7 +320,7 @@ package() {
 
     # SwiftShader ICD
     libvk_swiftshader.so
-    vk_swiftshader_icd.json
+    #vk_swiftshader_icd.json
   )
 
   if [[ -z ${_system_libs[icu]+set} ]]; then
